# forge-mcp

./: .gitignore  .woodpecker.yml  Cargo.toml  README.md  forge-mcp.example.toml
audit/: Cargo.toml
audit/src/: lib.rs
docs/superpowers/plans/: 2026-03-11-phase2-write-workflow.md  2026-03-12-phase3-http-control-plane.md  2026-03-14-multi-forge-git-proxy.md
docs/superpowers/specs/: 2026-03-12-phase3-http-control-plane-design.md  2026-03-14-multi-forge-git-proxy-design.md
domain/: Cargo.toml
domain/src/: diff.rs  lib.rs  policy.rs
forge/: Cargo.toml
forge/src/: gitlab.rs  lib.rs
git-exec/: Cargo.toml
git-exec/src/: lib.rs
orchestrator/: Cargo.toml
orchestrator/src/: lib.rs
server/: Cargo.toml  build.rs
server/src/: api.rs  auth.rs  auto_merge.rs  config.rs  events.rs  git_proxy.rs  handlers.rs  lib.rs  main.rs  registry.rs
skills/forge-mcp-agent-guide/: SKILL.md
skills/forge-mcp-review/: SKILL.md
transport/: Cargo.toml
transport/src/: lib.rs  main.rs
