[package]
name = "forge"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
domain = { version = "0.1.0", path = "../domain" }
reqwest = { version = "0.13.2", features = ["json", "query", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
