[package]
name = "forge"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
domain = { version = "0.1.0", path = "../domain" }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls-no-provider"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
