[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
audit = { version = "0.1.0", path = "../audit" }
domain = { version = "0.1.0", path = "../domain" }
forge = { version = "0.1.0", path = "../forge" }
orchestrator = { version = "0.1.0", path = "../orchestrator" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
transport = { version = "0.1.0", path = "../transport" }
