[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
audit = { version = "0.1.0", path = "../audit" }
axum = "0.8"
base64 = "0.22"
domain = { version = "0.1.0", path = "../domain" }
forge = { version = "0.1.0", path = "../forge" }
orchestrator = { version = "0.1.0", path = "../orchestrator" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.18"
toml = "0.8"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

[dev-dependencies]
async-trait = "0.1.89"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
