[package]
name = "transport"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.2.0", features = ["transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
rmcp = { version = "1.2.0", features = ["client", "transport-io"] }
wiremock = "0.6"
